# OMPKMeans

./: .gitignore  CMakeLists.txt  ForKMeansType_1.csv  ForKMeansType_2.csv  README.md  inputData5000.txt  inputData50000.txt  inputData500000.txt  main.cpp  outputResults.txt  plot_clusters.py
D2KMeans/: D2KMeans.cpp  D2KMeans.h
D3PadKMeans/: D3PadKMeans.cpp  D3PadKMeans.h
ForKMeans/: ForKMeans.cpp  ForKMeans.h
KMeansCritical/: CriticalKMeans.cpp  CriticalKMeans.h
PadKMeans/: PadKMeans.cpp  PadKMeans.h
Reports/: KMeans-OMP-Report.pages  OMPPresentation.key
SPMDMeans/: SPMDKMeans.cpp  SPMDKMeans.h
SerialKmeans/: SerialKMeans.cpp  SerialKMeans.h
Shared/: Cluster.cpp  Cluster.h  Data.cpp  Data.h  KMeans.cpp  KMeans.h  KMeansFactory.cpp  KMeansFactory.h  ParallelClasses.h  SetKMeans.cpp  SetKMeans.h
